@@ -11,6 +11,7 @@ import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.builder.RequiredArgumentBuilder;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.Dynamic2CommandExceptionType;
 import com.mojang.brigadier.exceptions.DynamicCommandExceptionType;
 import com.mojang.brigadier.suggestion.SuggestionProvider;
 import java.util.ArrayList;
@@ -25,16 +26,20 @@ import net.minecraft.network.chat.ComponentUtils;
 import net.minecraft.server.commands.ReloadCommand;
 import net.minecraft.server.packs.repository.Pack;
 import net.minecraft.server.packs.repository.PackRepository;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.flag.FeatureFlags;
 
 public class DataPackCommand {
     private static final DynamicCommandExceptionType ERROR_UNKNOWN_PACK = new DynamicCommandExceptionType(object -> Component.translatable("commands.datapack.unknown", object));
     private static final DynamicCommandExceptionType ERROR_PACK_ALREADY_ENABLED = new DynamicCommandExceptionType(object -> Component.translatable("commands.datapack.enable.failed", object));
     private static final DynamicCommandExceptionType ERROR_PACK_ALREADY_DISABLED = new DynamicCommandExceptionType(object -> Component.translatable("commands.datapack.disable.failed", object));
+    private static final Dynamic2CommandExceptionType ERROR_PACK_FEATURES_NOT_ENABLED = new Dynamic2CommandExceptionType((object, object2) -> Component.translatable("commands.datapack.enable.failed.no_flags", object, object2));
     private static final SuggestionProvider<CommandSourceStack> SELECTED_PACKS = (commandContext, suggestionsBuilder) -> SharedSuggestionProvider.suggest(((CommandSourceStack)commandContext.getSource()).getServer().getPackRepository().getSelectedIds().stream().map(StringArgumentType::escapeIfRequired), suggestionsBuilder);
     private static final SuggestionProvider<CommandSourceStack> UNSELECTED_PACKS = (commandContext, suggestionsBuilder) -> {
         PackRepository packRepository = ((CommandSourceStack)commandContext.getSource()).getServer().getPackRepository();
         Collection<String> collection = packRepository.getSelectedIds();
-        return SharedSuggestionProvider.suggest(packRepository.getAvailableIds().stream().filter(string -> !collection.contains(string)).map(StringArgumentType::escapeIfRequired), suggestionsBuilder);
+        FeatureFlagSet featureFlagSet = ((CommandSourceStack)commandContext.getSource()).enabledFeatures();
+        return SharedSuggestionProvider.suggest(packRepository.getAvailablePacks().stream().filter(pack -> pack.getRequestedFeatures().isSubsetOf(featureFlagSet)).map(Pack::getId).filter(string -> !collection.contains(string)).map(StringArgumentType::escapeIfRequired), suggestionsBuilder);
     };
 
     public static void register(CommandDispatcher<CommandSourceStack> commandDispatcher) {
@@ -68,7 +73,8 @@ public class DataPackCommand {
         packRepository.reload();
         Collection<Pack> collection = packRepository.getSelectedPacks();
         Collection<Pack> collection2 = packRepository.getAvailablePacks();
-        List list = collection2.stream().filter(pack -> !collection.contains(pack)).collect(Collectors.toList());
+        FeatureFlagSet featureFlagSet = commandSourceStack.enabledFeatures();
+        List<Pack> list = collection2.stream().filter(pack -> !collection.contains(pack) && pack.getRequestedFeatures().isSubsetOf(featureFlagSet)).toList();
         if (list.isEmpty()) {
             commandSourceStack.sendSuccess(Component.translatable("commands.datapack.list.available.none"), false);
         } else {
@@ -102,6 +108,11 @@ public class DataPackCommand {
         }
         if (!bl && !bl2) {
             throw ERROR_PACK_ALREADY_DISABLED.create(string2);
+        }
+        FeatureFlagSet featureFlagSet = commandContext.getSource().enabledFeatures();
+        FeatureFlagSet featureFlagSet2 = pack.getRequestedFeatures();
+        if (!featureFlagSet2.isSubsetOf(featureFlagSet)) {
+            throw ERROR_PACK_FEATURES_NOT_ENABLED.create(string2, FeatureFlags.printMissingFlags(featureFlagSet, featureFlagSet2));
         }
         return pack;
     }
